// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`无标签 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c2 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c2 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c2 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c2.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c2.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c1 {
  position: relative;
  border-radius: 4px;
}

.c1 > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.38);
  border-width: 1px;
}

.c1:hover > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.87);
}

.c1 > .sinoui-base-input__input {
  padding: 8px 14px;
}

.c1 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="c2 sinoui-notched-outline sinoui-notched-outline--no-label"
  >
    <div
      className="sinoui-notched-outline__leading"
    />
    <div
      className="sinoui-notched-outline__notch"
      style={
        Object {
          "width": 0,
        }
      }
    />
    <div
      className="sinoui-notched-outline__trailing"
    />
  </div>
</div>
`;

exports[`正确渲染边框模式下的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c2 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c2 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c2 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c2.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c2.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c1 {
  position: relative;
  border-radius: 4px;
}

.c1 > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.38);
  border-width: 1px;
}

.c1:hover > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.87);
}

.c1 > .sinoui-base-input__input {
  padding: 16px 14px;
}

.c1 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="c2 sinoui-notched-outline sinoui-notched-outline--no-label"
  >
    <div
      className="sinoui-notched-outline__leading"
    />
    <div
      className="sinoui-notched-outline__notch"
      style={
        Object {
          "width": 0,
        }
      }
    />
    <div
      className="sinoui-notched-outline__trailing"
    />
  </div>
</div>
`;

exports[`渲染不可用状态下边框模式的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  color: rgba(0,0,0,0.38);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c2 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c2 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c2 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c2.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c2.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c1 {
  position: relative;
  border-radius: 4px;
}

.c1 > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.26);
  border-width: 1px;
}

.c1:hover > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.26);
}

.c1 > .sinoui-base-input__input {
  padding: 16px 14px;
}

.c1 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

<div
  className="c0 sinoui-base-input sinoui-base-input--disabled c1"
  data-testid="baseInput"
  disabled={true}
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="c2 sinoui-notched-outline sinoui-notched-outline--no-label"
  >
    <div
      className="sinoui-notched-outline__leading"
    />
    <div
      className="sinoui-notched-outline__notch"
      style={
        Object {
          "width": 0,
        }
      }
    />
    <div
      className="sinoui-notched-outline__trailing"
    />
  </div>
</div>
`;

exports[`渲染密集状态下边框模式的Input 1`] = `
Array [
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c2 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c2 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c2 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c2.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c2.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c1 {
  position: relative;
  border-radius: 4px;
}

.c1 > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.38);
  border-width: 1px;
}

.c1:hover > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.87);
}

.c1 > .sinoui-base-input__input {
  padding: 16px 14px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c1 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

<div
    className="c0 sinoui-base-input c1"
    data-testid="baseInput"
    onClick={[Function]}
  >
    <input
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
    <div
      className="c2 sinoui-notched-outline sinoui-notched-outline--no-label"
    >
      <div
        className="sinoui-notched-outline__leading"
      />
      <div
        className="sinoui-notched-outline__notch"
        style={
          Object {
            "width": 0,
          }
        }
      />
      <div
        className="sinoui-notched-outline__trailing"
      />
    </div>
  </div>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c2 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c2 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c2 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c2.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c2.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c1 {
  position: relative;
  border-radius: 4px;
}

.c1 > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.38);
  border-width: 1px;
}

.c1:hover > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.87);
}

.c1 > .sinoui-base-input__input {
  padding: 8px 14px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

<div
    className="c0 sinoui-base-input c1"
    data-testid="baseInput"
    onClick={[Function]}
  >
    <input
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
    <div
      className="c2 sinoui-notched-outline sinoui-notched-outline--no-label"
    >
      <div
        className="sinoui-notched-outline__leading"
      />
      <div
        className="sinoui-notched-outline__notch"
        style={
          Object {
            "width": 0,
          }
        }
      />
      <div
        className="sinoui-notched-outline__trailing"
      />
    </div>
  </div>,
]
`;

exports[`渲染错误状态下边框模式的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c2 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c2 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c2 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c2.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c2.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c1 {
  position: relative;
  border-radius: 4px;
}

.c1 > .sinoui-notched-outline > div {
  border-color: #f44336;
  border-width: 1px;
}

.c1:hover > .sinoui-notched-outline > div {
  border-color: #f44336;
}

.c1 > .sinoui-base-input__input {
  padding: 16px 14px;
}

.c1 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="c2 sinoui-notched-outline sinoui-notched-outline--notched sinoui-notched-outline--no-label"
  >
    <div
      className="sinoui-notched-outline__leading"
    />
    <div
      className="sinoui-notched-outline__notch"
      style={
        Object {
          "width": 0,
        }
      }
    />
    <div
      className="sinoui-notched-outline__trailing"
    />
  </div>
</div>
`;

exports[`聚焦状态 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c2 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c2 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c2 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c2.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c2.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c1 {
  position: relative;
  border-radius: 4px;
}

.c1 > .sinoui-notched-outline > div {
  border-color: #3f51b5;
  border-width: 2px;
}

.c1:hover > .sinoui-notched-outline > div {
  border-color: #3f51b5;
}

.c1 > .sinoui-base-input__input {
  padding: 16px 14px;
}

.c1 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="c2 sinoui-notched-outline sinoui-notched-outline--no-label"
  >
    <div
      className="sinoui-notched-outline__leading"
    />
    <div
      className="sinoui-notched-outline__notch"
      style={
        Object {
          "width": 0,
        }
      }
    />
    <div
      className="sinoui-notched-outline__trailing"
    />
  </div>
</div>
`;
